<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home"/>

    <item
        android:id="@+id/bottom_userPage"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile"/>

    <item
        android:id="@+id/bottom_workOutCategory"
        android:icon="@drawable/baseline_category_24"
        android:title="Categories"/>

    <item
        android:id="@+id/bottom_userworkout"
        android:icon="@drawable/baseline_fitness_center_24"
        android:title="My Workouts"/>

    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="Settings"/>

</menu>