<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fitnessTracker.activities.Activities.UserSettingsActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <EditText
        android:id="@+id/UserSettingsActivityUserName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/goldman_bold"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserSettingsActivityAge"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/goldman_bold"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityUserName" />

    <EditText
        android:id="@+id/UserSettingsActivityWtInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/goldman_bold"
        android:hint="@string/Weight"
        android:inputType="number"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityAge" />

    <EditText
        android:id="@+id/UserSettingsActivityHt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/goldman_bold"
        android:hint="@string/Height"
        android:inputType="text"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityWtInput" />

    <Button
        android:id="@+id/UserSettingsActivitySaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#B60000"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/UserSettingsTargetWeight"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/goldman_bold"
        android:hint="@string/targetWeight"
        android:inputType="number"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityHt" />

</androidx.constraintlayout.widget.ConstraintLayout>
