<resources>
    <string name="app_name">Fitness</string>
    <string name="settingsBtn">Navigate to user settings</string>
    <string name="UserProfile">User Profile</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="fitnessGoal">Fitness Goal</string>
    <string name="inspiration">Inspiration</string>
    <string name="settingsButton">settings button</string>
    <string name="userImage">User Image</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="currentWeight">Current Weight</string>
    <string name="targetWeight">Target Weight</string>
    <string name="userName">Username</string>
    <string name="signUpButton">Sign Up</string>
    <string name="loginButton">Log In</string>
    <string name="loginTitle">Log In</string>
    <string name="loginEmailEditText">Email</string>
    <string name="loginPasswordTextView">Password</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpButtonSignUp">Sign Up</string>
    <string name="signUpEmailTextView">Email</string>
    <string name="signUpPasswordTextView">Password</string>
    <string name="sugnUpNameTestView">Name</string>
    <string name="verifySignUpTextView">Verify Sign Up</string>
    <string name="verifySignUpButton">Submit</string>
    <string name="verifySignUpConCodeTextView">Confirmation Code</string>
    <string name="nameInput">Name</string>
    <string name="nameTV">Name</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="save">Save</string>
    <string name="Height">Height</string>
    <string name="apiTextView">API</string>
    <string name="height">Height</string>
    <string name="SaveW">Save</string>
    <string name="target">Target Weight</string>
    <string name="currentWorkouts">Current Workout</string>
    <string name="selectAnExercise">Select An Exercise</string>
    <string name="bodyPart">Body Part</string>
    <string name="equipmentUsed">Equipment Used</string>
    <string name="muscleTarget">Muscle Target</string>
    <string name="welcome">Welcome:</string>
    <string name="username">Username</string>
    <string name="yourProfile">Your Profile</string>
    <string name="selectAWorkout">Select A Workout</string>
    <string name="yourWorkouts">Your Workouts</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectedWorkoutImage">Selected Workout Image</string>
    <string name="back">Back</string>
    <string name="cardio">Cardio</string>
    <string name="chest">Chest</string>
    <string name="lowerArms">Lower Arms</string>
    <string name="lowerLegs">Lower Legs</string>
    <string name="neck">Neck</string>
    <string name="shoulders">Shoulders</string>
    <string name="upperArms">Upper Arms</string>
    <string name="upperLegs">Upper Legs</string>
    <string name="waist">Waist</string>
    <string name="nameTVUserProfile">Name</string>
    <string name="agetv">Age</string>
    <string name="usernametv">Username</string>
    <string name="weighttv">Weight</string>
    <string name="heighttv">Height</string>
    <string name="targetWeightTv">Target Weight</string>
    <string name="userProfileImg">Profile Image</string>
    <string name="nameTag">Name</string>
    <string name="nameTextView">name</string>

</resources>